--- a/.github/actions.yml
+++ b/.github/actions.yml
@@ -1,12 +1,12 @@
 name: "Hello World"
 description: "greet someone and record them time"
 inputs:
-  who-to-greet: id
+  who-to-greet:
   description: "who to greet"
   required: true
   default: "World"
 outputs:
-  time: id
+  time:
   description: "the time we greeted you"
 
 runs:
