--- a/.github/actions.yml
+++ b/.github/actions.yml
@@ -1,13 +1,13 @@
 name: "Hello World"
-description: "greet someone and record them time"
+description: "Greet someone and record the time"
 inputs:
-  who-to-greet:
-    description: "who to greet"
+  who-to-greet: # id of input
+    description: "Who to greet"
     required: true
     default: "World"
 outputs:
-  time:
-    description: "the time we greeted you"
+  time: # id of output
+    description: "The time we greeted you"
 
 runs:
   using: "docker"
